Changes to first pashe and new fields
